--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ form{
   justify-content: space-around;
 }
  input{
-   width: 400px;
+   width:70%;
    height: 50px;
    border: 2px solid blue;
    font-weight: bolder;
